[gd_scene load_steps=10 format=3 uid="uid://cumhvlslncpcm"]

[ext_resource type="Texture2D" uid="uid://dc8ti5tg4ewhs" path="res://Sprites/UI/WarningIcon.png" id="1_26ip6"]
[ext_resource type="Script" path="res://Scripts/DangerMarker.gd" id="2_5pu6c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_flfg6"]
size = Vector2(180, 480)

[sub_resource type="Animation" id="Animation_b814e"]
resource_name = "MarkerBlink_Loop"
length = 1.2
loop_mode = 1

[sub_resource type="Animation" id="Animation_u66ex"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Markers/DangerMarker_Left:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Markers/DangerMarker_Right:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5s84j"]
resource_name = "MarkerHide_idle"
loop_mode = 1

[sub_resource type="Animation" id="Animation_c5any"]
resource_name = "MarkerLeftBlink"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Markers/DangerMarker_Left:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}

[sub_resource type="Animation" id="Animation_w8hv2"]
resource_name = "MarkerRightBlink"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Markers/DangerMarker_Right:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r7q3f"]
_data = {
"MarkerBlink_Loop": SubResource("Animation_b814e"),
"MarkerHide_idle": SubResource("Animation_5s84j"),
"MarkerLeftBlink": SubResource("Animation_c5any"),
"MarkerRightBlink": SubResource("Animation_w8hv2"),
"RESET": SubResource("Animation_u66ex")
}

[node name="DangerMarkers" type="Node"]

[node name="Markers" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DangerMarker_Left" type="TextureRect" parent="Markers"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.0
offset_right = 64.0
offset_bottom = 32.0
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(32, 32)
texture = ExtResource("1_26ip6")
script = ExtResource("2_5pu6c")

[node name="DangerMarker_Right" type="TextureRect" parent="Markers"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(32, 32)
texture = ExtResource("1_26ip6")
flip_h = true
script = ExtResource("2_5pu6c")
is_marker_right = true

[node name="Areas" type="Node2D" parent="."]

[node name="ActiveAreaLeft" type="Area2D" parent="Areas"]
position = Vector2(0, 240)
collision_layer = 16
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/ActiveAreaLeft"]
position = Vector2(90, 0)
shape = SubResource("RectangleShape2D_flfg6")

[node name="ActiveAreaRight" type="Area2D" parent="Areas"]
position = Vector2(640, 240)
collision_layer = 16
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/ActiveAreaRight"]
position = Vector2(-90, 0)
shape = SubResource("RectangleShape2D_flfg6")

[node name="MarkerAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r7q3f")
}

[connection signal="body_entered" from="Areas/ActiveAreaLeft" to="Markers/DangerMarker_Left" method="set_marker_active"]
[connection signal="body_exited" from="Areas/ActiveAreaLeft" to="Markers/DangerMarker_Left" method="set_marker_inactive"]
[connection signal="body_entered" from="Areas/ActiveAreaRight" to="Markers/DangerMarker_Right" method="set_marker_active"]
[connection signal="body_exited" from="Areas/ActiveAreaRight" to="Markers/DangerMarker_Right" method="set_marker_inactive"]
